[SCENEBUILDER] FindBugs: killed DM_FP_NUMBER_CTOR